# hurin

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  gateway-wrapper.sh  openclaw.json
adrs/: ADR-0001-agent-swarm.md  ADR-0001-status.md  ADR-0002-prompt-caching.md  ADR-0003-hurin-lockdown-validation.md  ADR-0004-co-founder-system.md  ADR-0005-action-system.md  ADR-0006-team-lead-daemon.md  ADR-0007-self-evolving-system.md  ADR-0008-three-agent-architecture.md  ADR-0009-collective-intelligence.md  README.md  elvis-agent-swarm-article.md  template.md
articles/: agent-swarm-full-setup.md  multi-agent-collective-intelligence-research-2025-2026.md
chief-of-staff/: chief-of-staff.py
co-founder/: README.md  action-approve.sh  action-list.sh  action-refine.sh  action-router.sh  action-status.sh  co-founder-sdk.py  co-founder.sh  config.sh  discord-post.sh  journal.md  (+3 more)
monitor/: analyze_prompts.py  backfill-trust-ledger.py  board-reconcile.py  cc-query.py  channel-threads.json  check-agents.py  ci-dashboard.html  ci-dashboard.py  ci-fix-cooldown.json  discord-react.sh  discord_relay.py  feedback.py  impact_dashboard.py  issue-comment-cooldowns.json  issue-comment-cursors.json  pr-comment-cooldowns.json  pr-comment-cursors.json  pr-mention-cursors.json  processed-sessions.json  pyproject.toml  retrospective-prompt.md  retrospective.sh  review-prs.sh  serve-dashboard.py  session_learner.py  shared_memory.py  signals_cli.py  signals_dashboard.py  spawn-task.sh  task-cli.sh  task-daemon.py  tasks.sh  telemetry.py  thread-followup.sh  trust-ledger.json  trust_ledger.py
(+216 files in other folders)
