[project]
name = "openclaw-monitor"
version = "0.1.0"
description = "OpenClaw task monitoring daemon"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
